2007-11-03  Jürg Billeter  <j@bitron.ch>

	* gee/Makefile.am: update for vala 0.1.4

2007-09-07  Jürg Billeter  <j@bitron.ch>

	* update license headers to the GNU Lesser General Public License,
	  version 2.1 or later

2007-08-30  Jürg Billeter  <j@bitron.ch>

	* gee/hashmap.vala, gee/hashset.vala: replace reference-type structs
	  by classes

2007-08-30  Jürg Billeter  <j@bitron.ch>

	* gee/arraylist.vala, gee/hashmap.vala, gee/hashset.vala,
	  gee/iterable.vala, gee/iterator.vala, gee/list.vala, gee/map.vala,
	  gee/readonlycollection.vala, gee/readonlylist.vala,
	  gee/readonlymap.vala, gee/readonlyset.vala: explicitly subtype
	  GLib.Object to support future versions of Vala

2007-07-27  Jürg Billeter  <j@bitron.ch>

	* configure.ac: Post-release version bump

2007-07-27  Jürg Billeter  <j@bitron.ch>

	* NEWS: update for 0.1.0 release

2007-07-27  Jürg Billeter  <j@bitron.ch>

	* gee/Makefile.am: distribute gee.vala to fix build without valac

2007-07-27  Jürg Billeter  <j@bitron.ch>

	* configure.ac: fix package name
