@@ -1,3 +1,7 @@
+2007-12-15  Jürg Billeter  <j@bitron.ch>
+
+	* gee/hashmap.vala, gee/hashset.vala: update for vala trunk
+
 2007-11-03  Jürg Billeter  <j@bitron.ch>
 
 	* gee/Makefile.am: update for vala 0.1.4
